--- a/scss/modules/_oscilloscope.scss
+++ b/scss/modules/_oscilloscope.scss
@@ -1,11 +1,9 @@
 .oscilloscope {
 
-//  margin: 2rem;
-
   canvas {
     background: $light-grey;
     box-shadow: inset 0 0.3rem 2.2rem -0.2rem $dark-grey;
-    margin: 0 2rem;
+    margin: 0 1rem;// GLOBAL PADDING
     max-width: 30rem;
     width: 100%;
   }
